fixed disappointed scrolling on mobile.

--- a/app/assets/stylesheets/site-layout.css.scss
+++ b/app/assets/stylesheets/site-layout.css.scss
@@ -3,6 +3,7 @@
   width: 100%;
   position: absolute;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .last-page {
